--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                                         <div
                                             class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="" class="dropdown-item">Singapoor</a>
+                                            <a href="singapore.html" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
@@ -279,7 +279,7 @@
                             <h4 class="font-weight-normal mb-4">Hykin overseas is a very genuine company we are totally
                                 satisfied with. We travelled to Thailand every thing is been taken care by them. I must
                                 say u can believe and go forward with Hykin overseas</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" alt="">
+                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.png" alt="">
                             <h5 class="m-0">Satish Babu</h5>
                             <span>Profession</span>
                         </div>
@@ -287,7 +287,7 @@
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-normal mb-4">Hykin Overseas is best and genuine consultancy, I got
                                 visa within 10 days.m</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" alt="">
+                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.png" alt="">
                             <h5 class="m-0">Gariganti Suresh</h5>
                             <span>Profession</span>
                         </div>
@@ -296,7 +296,7 @@
                             <h4 class="font-weight-normal mb-4">Hykin Overseas is the best and genuine consultancy which
                                 I seen so far. I got my visa in just 15 days only. The guidence and Assistance was
                                 really excellent.</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.jpg" alt="">
+                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.png" alt="">
                             <h5 class="m-0">siva krishna ummadi</h5>
                             <span>Profession</span>
                         </div>
@@ -319,13 +319,13 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light  btn-square mr-2"
+                            <a class="btn btn-outline-light btn-facebook btn-square mr-2"
                                 href="https://www.facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2"
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
-                            "><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                        "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
