--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                                         <div
                                             class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="" class="dropdown-item">Singapoor</a>
+                                            <a href="singapore.html" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
@@ -216,13 +216,13 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light  btn-square mr-2"
-                            href="https://www.facebook.com/profile.php?id=61550644413617"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-square mr-2"
-                            href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
-                        "><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-facebook btn-square mr-2"
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
