--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="singapoor.html0" class="dropdown-item">Singapoor</a>
+                                            <a href="singapore.html" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
@@ -533,14 +533,14 @@
                     <div class="team-item rounded overflow-hidden mb-2">
                         <div class="team-img position-relative">
                             <img class="img-fluid" src="img/team-1.png" alt="">
-                            <div class="team-social">
+                            <!-- <div class="team-social">
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-twitter"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="bg-secondary p-4">
                             <h5>Web Designer</h5>
@@ -552,14 +552,14 @@
                     <div class="team-item rounded overflow-hidden mb-2">
                         <div class="team-img position-relative">
                             <img class="img-fluid" src="img/team-2.png" alt="">
-                            <div class="team-social">
+                            <!-- <div class="team-social">
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-twitter"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="bg-secondary p-4">
                             <h5>Java FUll Stack</h5>
@@ -571,14 +571,14 @@
                     <div class="team-item rounded overflow-hidden mb-2">
                         <div class="team-img position-relative">
                             <img class="img-fluid" src="img/team-3.png" alt="">
-                            <div class="team-social">
+                            <!-- <div class="team-social">
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-twitter"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="bg-secondary p-4">
                             <h5>Data Science</h5>
@@ -590,14 +590,14 @@
                     <div class="team-item rounded overflow-hidden mb-2">
                         <div class="team-img position-relative">
                             <img class="img-fluid" src="img/team-4.png" alt="">
-                            <div class="team-social">
+                            <!-- <div class="team-social">
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-twitter"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                         class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="bg-secondary p-4">
                             <h5>PHP Developer</h5>
@@ -626,7 +626,7 @@
                             <h4 class="font-weight-normal mb-4">Hykin overseas is a very genuine company we are totally
                                 satisfied with. We travelled to Thailand every thing is been taken care by them. I must
                                 say u can believe and go forward with Hykin overseas</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" alt="">
+                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.png" alt="">
                             <h5 class="m-0">Satish Babu</h5>
                             <span>Profession</span>
                         </div>
@@ -634,7 +634,7 @@
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-normal mb-4">Hykin Overseas is best and genuine consultancy, I got
                                 visa within 10 days.m</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" alt="">
+                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.png" alt="">
                             <h5 class="m-0">Gariganti Suresh</h5>
                             <span>Profession</span>
                         </div>
@@ -643,7 +643,7 @@
                             <h4 class="font-weight-normal mb-4">Hykin Overseas is the best and genuine consultancy which
                                 I seen so far. I got my visa in just 15 days only. The guidence and Assistance was
                                 really excellent.</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.jpg" alt="">
+                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.png" alt="">
                             <h5 class="m-0">siva krishna ummadi</h5>
                             <span>Profession</span>
                         </div>
@@ -667,9 +667,8 @@
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/blog-1.jpg" alt="">
                         <a class="blog-overlay text-decoration-none" href="">
-                            <h5 class="text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita at ut
-                                clita</h5>
-                            <p class="text-primary m-0">Jan 01, 2050</p>
+                            <h5 class="text-white mb-3"></h5>
+                            <p class="text-primary m-0"></p>
                         </a>
                     </div>
                 </div>
@@ -677,9 +676,8 @@
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/blog-2.jpg" alt="">
                         <a class="blog-overlay text-decoration-none" href="">
-                            <h5 class="text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita at ut
-                                clita</h5>
-                            <p class="text-primary m-0">Jan 01, 2050</p>
+                            <h5 class="text-white mb-3"></h5>
+                            <p class="text-primary m-0"></p>
                         </a>
                     </div>
                 </div>
@@ -687,9 +685,8 @@
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/blog-3.jpg" alt="">
                         <a class="blog-overlay text-decoration-none" href="">
-                            <h5 class="text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita at ut
-                                clita</h5>
-                            <p class="text-primary m-0">Jan 01, 2050</p>
+                            <h5 class="text-white mb-3"></h5>
+                            <p class="text-primary m-0"></p>
                         </a>
                     </div>
                 </div>
@@ -711,12 +708,12 @@
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <!-- <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
-                            <a class="btn btn-outline-light  btn-square mr-2"
+                            <a class="btn btn-outline-light btn-facebook btn-square mr-2"
                                 href="https://www.facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2"
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                             "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
