--- a/study-in-schengen.html
+++ b/study-in-schengen.html
@@ -113,8 +113,8 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Thailand</a>
-                                            <a href="" class="dropdown-item">Singapoor</a>
+                                            <a href="thailand.html" class="dropdown-item">Thailand</a>
+                                            <a href="singapore.html" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
@@ -160,7 +160,8 @@
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png" alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
+                            alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
                             oneself in a new culture, learn a new language, and gain a unique perspective on the world.
                             Additionally, studying abroad can enhance one's academic and professional prospects by
@@ -278,7 +279,8 @@
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In Singapore</a>
+                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Singapore</a>
                                 <!-- <span class="badge badge-primary badge-pill">150</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
@@ -473,12 +475,12 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light  btn-square mr-2"
-                            href="https://www.facebook.com/profile.php?id=61550644413617"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-square mr-2"
-                            href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            <a class="btn btn-outline-light btn-facebook btn-square mr-2"
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
