--- a/thailand.html
+++ b/thailand.html
@@ -115,7 +115,7 @@
                                         <div
                                             class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="" class="dropdown-item">Singapoor</a>
+                                            <a href="singapore.html" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
@@ -394,14 +394,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-1.jpg" alt="">
+                                        <img class="img-fluid" src="img/destnation/bangkok.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light mx-1" href="#">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -413,14 +414,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-2.jpg" alt="">
+                                        <img class="img-fluid" src="img/destnation/phuket.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light mx-1" href="#">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -432,14 +434,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-3.jpg" alt="">
+                                        <img class="img-fluid" src="img/destnation/pattaya.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light mx-1" href="#">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -451,14 +454,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-4.jpg" alt="">
+                                        <img class="img-fluid" src="img/destnation/krabi.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light mx-1" href="#">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -489,13 +493,14 @@
                         <p><i class="fa fa-map-marker-alt mr-2"></i>Dwarakapuri, Punjagutta, Hyd</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
-                        <div<a class="btn btn-outline-light  btn-square mr-2"
-                        href="https://www.facebook.com/profile.php?id=61550644413617"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-square mr-2"
-                        href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
-                    "><i class="fab fa-instagram"></i></a>
+                        <div class="d-flex justify-content-start mt-4">
+                            <a class="btn btn-outline-light btn-facebook btn-square mr-2"
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                        "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
